Add support for securitySchem in the reosurce files for specific methods (#74)
