# examples/addressbook/openapi.yaml
@@ -4,8 +4,6 @@ info:
   description: Example person and addressbook API
   version: "1.0"
 # https://www.jvt.me/posts/2022/05/29/openapi-json-patch/
-security:
-  - bearer_auth: []
 components:
   schemas:
     CreateAddressbook:
@@ -148,6 +146,8 @@ paths:
             application/json:
               schema: *id003
           description: Response for CREATED
+      security:
+      - bearer_auth: []
       tags:
       - addressbook
   /addressbook/{address_key}:
@@ -167,6 +167,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/addressbook'
           description: Response for OK
+      security:
+      - bearer_auth: []
       tags:
       - addressbook
     get:
@@ -231,6 +233,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/UpdateAddressbook'
           description: Response for OK
+      security:
+      - bearer_auth: []
       tags:
       - addressbook
   /addressbook/{address_key}/addrtype:
@@ -762,6 +766,8 @@ paths:
             application/json:
               schema: *id009
           description: Response for CREATED
+      security:
+      - bearer_auth: []
       tags:
       - addressbook
   /addressbook/{address_key}/person/{uuid}:
@@ -786,6 +792,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/person'
           description: Response for OK
+      security:
+      - bearer_auth: []
       tags:
       - addressbook
     get:
@@ -887,6 +895,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/UpdatePerson'
           description: Response for OK
+      security:
+      - bearer_auth: []
       tags:
       - addressbook
   /addressbook/{address_key}/person/{uuid}/age:
@@ -1518,6 +1528,8 @@ paths:
             application/json:
               schema: *id018
           description: Response for CREATED
+      security:
+      - bearer_auth: []
       tags:
       - persons
   /persons/{uuid}:
@@ -1537,6 +1549,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/person'
           description: Response for OK
+      security:
+      - bearer_auth: []
       tags:
       - persons
     get:
@@ -1600,6 +1614,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/UpdatePerson'
           description: Response for OK
+      security:
+      - bearer_auth: []
       tags:
       - persons
   /persons/{uuid}/age:
@@ -1988,6 +2004,8 @@ paths:
             application/json:
               schema: *id025
           description: Response for CREATED
+      security:
+      - bearer_auth: []
       tags:
       - postal_codes
   /postal_codes/{uuid}:
@@ -2007,6 +2025,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/postal_code'
           description: Response for OK
+      security:
+      - bearer_auth: []
       tags:
       - postal_codes
     get:
